# multi_serial

./: Cargo.toml  README.md  build.rs  config.json  generate_icon.py
src/: main.rs  serial_manager.rs
