[package]
name = "multi_serial"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
serialport = "4.5"
serde = { version = "1.0", features = ["derive"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
chrono = "0.4"
serde_json = "1.0"
rfd = "0.15"
